fix(text-input): remove padding that causes double spacing

--- a/packages/text-input/text-input.scss
+++ b/packages/text-input/text-input.scss
@@ -27,7 +27,6 @@ $textarea-height--expanded: $input-height * 7 + $bottom-padding;
     min-height: $input-total-height;
     padding-top: $label-height;
     background-color: $input-bg-color;
-    padding-bottom: $component-spacing--large;
 
     &--inline {
         display: inline-block;
